[workspace]

members = ["2021/03/rust", "2021/04/rust202104", "2021/05/rust202105", "2021/06/rust_202106", "2021/07/rust_202107", "2021/08/rust_202108", "2021/09/rust202109", "2021/10/rust202110", "2021/11/rust202111", "2021/12/rust202112", "2021/13/rust202113", "2022/06/rust_202006", "2022/07/rust_202207", "2022/08/rust_202208", "2022/09/rust_202309", "2022/10/rust_202210", "2022/11/rust_202211", "2022/12/rust_202212", "2022/13/rust_202213", "2025/01/rust_202501", "2025/02/rust_202502", "2025/03/rust_202503", "2025/04/rust_202504", "2025/05/rust_202505", "2025/06/rust_202506", "2025/07/rust_202507", "2025/08/rust_202508",]

resolver = "2"
